<resources>
    <string name="app_name">ETFMDB</string>
    <string name="buttonPodijeli">Podijeli</string>
    <string name="buttonGlumciTekst">GLUMCI</string>
    <string name="buttonReziseriTekst">REŽISERI</string>
    <string name="buttonZanroviTekst">ŽANROVI</string>
    <string name="buttonFilmoviTekst">FILMOVI</string>
    <string name="buttonZapamtiTekst">Zapamti</string>
    <string name="buttonOstaloTekst">OSTALO</string>
    <string name="buttonPretraga">Pretraga</string>
    <string name="buttonBookmark">Bookmark</string>
    <string name="mjestoRodjenjaLabelTekst">Mjesto rođenja:</string>
    <string name="ratingLabelTekst">Rating:</string>
    <string name="spolLabelTekst">Spol:</string>
    <string name="imageButtonTekst">Jezik</string>
    <string name="shareTekst">Podijeli pomoću:</string>
    <string-array name="ImeIPrezime">
        <item>Meryl Streep</item>
        <item>Elizabeth Taylor</item>
        <item>Leonardo DiCaprio</item>
        <item>Nicolas Cage</item>
        <item>Sean Connery</item>
        <item>Sophia Loren</item>
        <item>Rade Šerbedžija</item>
        <item>Jason Statham</item>
        <item>Rooney Mara</item>
        <item>Amy Adams</item>
    </string-array>
    <string-array name="GodinaRodjenja">
        <item>1949</item>
        <item>1932</item>
        <item>1974</item>
        <item>1964</item>
        <item>1930</item>
        <item>1934</item>
        <item>1946</item>
        <item>1967</item>
        <item>1985</item>
        <item>1974</item>
    </string-array>
    <string-array name="MjestoRodjenja">
        <item>New Orleans</item>
        <item>London</item>
        <item>Los Angeles</item>
        <item>Long Beach</item>
        <item>Fountainbridge</item>
        <item>Rome</item>
        <item>Bunić</item>
        <item>Shirebrook</item>
        <item>Bedford</item>
        <item>Vicenza</item>
    </string-array>
    <string-array name="Rating">
        <item>1</item>
        <item>3</item>
        <item>2</item>
        <item>18</item>
        <item>5</item>
        <item>10</item>
        <item>9</item>
        <item>20</item>
        <item>35</item>
        <item>22</item>
    </string-array>
    <string-array name="GodinaSmrti">
        <item>/</item>
        <item>2011</item>
        <item>/</item>
        <item>/</item>
        <item>/</item>
        <item>/</item>
        <item>/</item>
        <item>/</item>
        <item>/</item>
        <item>/</item>
    </string-array>
</resources>